update: landing page

--- a/Brandlogs/LandingPage/landingPage.html
+++ b/Brandlogs/LandingPage/landingPage.html
@@ -6,7 +6,7 @@
     <title>Brandlogs</title>
     <link rel="icon" href="/assets/images/Brandlogs Inc Logo NEW LOGO 14.08 1.png" type="image/x-icon">
     <link rel="shortcut icon" href="/assets/images/Brandlogs Inc Logo NEW LOGO 14.08 1.png" type="image/x-icon">
-    <link rel="stylesheet" href="./landingpage.css"/>
+    <link rel="stylesheet" href="./landingPage.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
@@ -46,10 +46,10 @@
     <main>
 
     <!-- Hero section -->
-    <section class="container-fluid mx-auto position-relative overflow-hidden r bg-no-repeat"
+    <section class="container-fluid mx-auto position-relative overflow-hidden  bg-no-repeat"
     style="background-position: 50%;
-    background-image: url('../assets/images/hero-img.png');
-    height: 480px;">
+    background-image: url('./hero.jpeg'); background-repeat: no-repeat; background-size: cover; background-position: center; 
+    height: 100vh;">
         <div class="d-flex justify-content-center">
             <div class="position-absolute top-0 right-0 bottom-0 left-0 h-100 w-100 overflow-hidden">
                 <div class="d-flex h-100 align-items-center justify-content-center">
@@ -63,7 +63,7 @@
                         <h6 class="-mt-8" style="padding: 0px 20px;"><b>That Rewards you $250 Gift Voucher Bonus for Kickstarting Feeding a Food Insecure Child.</b></h6>
                         <br/>
                         <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
-                        <button type="button" onclick="NavigateHome()" class="cta">
+                        <button type="button" onclick="NavigateHome()" style="width: 200px; margin-top: 15px;" class="btn btn-danger">
                             <b>Explore Product</b>
                         </button>  
                     </div>
@@ -232,7 +232,7 @@
                       </div>
                       <br/>
                       <br/>
-                      <h1 class="text-3xl font-bold tracking-tight md:text-4xl xl:text-5xl text-orange text-right" style="color: #F7A01C; font-size: 60px; margin-top: -140px;"><span style="font-size: 18px;">Up to</span><br/> 6500</h1>
+                      <h1 class="text-3xl font-bold tracking-tight md:text-4xl xl:text-5xl text-orange text-right" style="color: #F7A01C; font-size: 60px; margin-top: -140px;"><span style="font-size: 18px; margin-right: 90px;">Up to</span><br/> 6500</h1>
                     </div>
                     <div class="flex flex-col justify-between flex-grow">
                       <p class="text-black text-2xl font-medium text-right">Globally spoken language options</p>
@@ -253,7 +253,7 @@
                       </div>
                       <br/>
                       <br/>
-                      <h1 class="text-3xl font-bold tracking-tight md:text-4xl xl:text-5xl text-orange text-right" style="color: #F7A01C; font-size: 60px; margin-top: -140px;"><span style="font-size: 18px;">Up to</span><br/>90 <span style="font-size: 26px;">Days</span></h1>
+                      <h1 class="text-3xl font-bold tracking-tight md:text-4xl xl:text-5xl text-orange text-right" style="color: #F7A01C; font-size: 60px; margin-top: -140px;"><span style="font-size: 18px; margin-right: 90px;">Up to</span><br/>90 <span style="font-size: 26px;">Days</span></h1>
                     </div>
                     <div class="flex flex-col justify-between flex-grow">
                       <p class="text-black text-2xl font-medium text-right">Gifting flexible payment plan</p>
@@ -724,26 +724,26 @@
               <div class="footer-links ">
                 
                 <div>
-                  <a href="#About" class="text-decoration-none ">About Us</a>
+                  <a href="#About" class="text-decoration-none   ">About Us</a>
                 </div>
                 <div>
-                  <a href="#Benefits" class="text-decoration-none">Benefits</a>
+                  <a href="#Benefits" class="text-decoration-none ">Benefits</a>
                 </div>
                 <div>
-                  <a href="#OurStories" class="text-decoration-none">Our Stories</a>
+                  <a href="#OurStories" class="text-decoration-none  ">Our Stories</a>
                 </div>
                 <div>
-                    <a href="#FAQs" class="text-decoration-none">FAQs</a>
+                    <a href="#FAQs" class="text-decoration-none ">FAQs</a>
                 </div>
                 <div>
-                    <a href="../PrivacyPolicy/privacyPolicy.html" class="text-decoration-none">Privacy Policy</a>
+                    <a href="../PrivacyPolicy/privacyPolicy.html" class="text-decoration-none  ">Privacy Policy</a>
                 </div>
                 <div>
-                    <a href="../TermsAndConditions/termsAndConditions.html" class="text-decoration-none">Terms &amp; Conditions</a>
+                    <a href="../TermsAndConditions/termsAndConditions.html " class="text-decoration-none ">Terms &amp; Conditions</a>
                 </div>
                 <br/>
                 <div>
-                  <a href="../ContactForm/contact.html" class="text-decoration-none">Contact Us</a>
+                  <a href="../ContactForm/contact.html" class="text-decoration-none ">Contact Us</a>
                 </div>
                 <p class="text-end text-white pt-2">94306 Palo Alto, CA, United States</p>
                 <br/>
