update: landing page

--- a/Brandlogs/Admin/mealprogram.html
+++ b/Brandlogs/Admin/mealprogram.html
@@ -137,17 +137,22 @@
                 data-target="#details1"
                 aria-expanded="false"
               >
-                <td>
+                <td class="flex align-items-center justify-content-center">
                   <img
-                    src="../Assets/images/school logo.png"
-                    width="50px"
-                    alt=""
+                    src="../Assets/images/logo1.png"
+                    alt="logo"
+                    style="width: 80px; border-radius: 50%"
                   />
                 </td>
-                <td>School 1</td>
+                <td>Kabarak Primary School</td>
                 <td>100</td>
                 <td>
-                  <button class="btn btn-outline-warning">View More</button>
+                  <button
+                    class="btn"
+                    style="background-color: #db2127; color: #ffffff"
+                  >
+                    View More
+                  </button>
                 </td>
               </tr>
               <tr
@@ -155,17 +160,22 @@
                 data-target="#details2"
                 aria-expanded="false"
               >
-                <td>
+                <td class="flex align-items-center justify-content-center">
                   <img
-                    src="../Assets/images/school logo.png"
-                    width="50px"
-                    alt=""
+                    src="../Assets/images/logo2.jpeg"
+                    alt="logo"
+                    style="width: 80px; border-radius: 50%"
                   />
                 </td>
-                <td>School 2</td>
+                <td>Bright Minds Academy</td>
                 <td>45</td>
                 <td>
-                  <button class="btn btn-outline-warning">View More</button>
+                  <button
+                    class="btn"
+                    style="background-color: #db2127; color: #ffffff"
+                  >
+                    View More
+                  </button>
                 </td>
               </tr>
               <tr
@@ -173,17 +183,22 @@
                 data-target="#details3"
                 aria-expanded="false"
               >
-                <td>
+                <td class="flex align-items-center justify-content-center">
                   <img
-                    src="../Assets/images/school logo.png"
-                    width="50px"
-                    alt=""
+                    src="../Assets/images/logo3.png"
+                    alt="logo"
+                    style="width: 80px; border-radius: 50%"
                   />
                 </td>
-                <td>School 3</td>
+                <td>Rafiki Junior School</td>
                 <td>75</td>
                 <td>
-                  <button class="btn btn-outline-warning">View More</button>
+                  <button
+                    class="btn"
+                    style="background-color: #db2127; color: #ffffff"
+                  >
+                    View More
+                  </button>
                 </td>
               </tr>
             </tbody>
