--- a/Brandlogs/LandingPage/landingPage.html
+++ b/Brandlogs/LandingPage/landingPage.html
@@ -62,7 +62,7 @@
                         <br/>
                         <h6 class="-mt-8" style="padding: 0px 20px;"><b>That Rewards you $250 Gift Voucher Bonus for Kickstarting Feeding a Food Insecure Child.</b></h6>
                         <br/>
-                        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+                        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get Hero's $250 Bonus</p>
                         <button type="button" onclick="NavigateHome()" style="width: 200px; margin-top: 15px;" class="btn btn-danger">
                             <b>Explore Product</b>
                         </button>  
@@ -92,7 +92,7 @@
         </div>
     
         <br/>
-        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get Hero's $250 Bonus</p>
         <button type="button" onclick="NavigateHome()" class="cta">
             <b>Explore Product</b>
         </button>  
@@ -286,7 +286,7 @@
         </div>
 
         <br/>
-        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get Hero's $250 Bonus</p>
         <button type="button" onclick="NavigateHome()" class="cta">
             <b>Explore Product</b>
         </button>  
@@ -422,7 +422,7 @@
         </div>
         <br/>
         <br/>
-        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get Hero's $250 Bonus</p>
         <button type="button" onclick="NavigateHome()" class="cta">
             <b>Explore Product</b>
         </button>  
@@ -577,7 +577,7 @@
         </section>
         <br/>
         <br/>
-        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get Hero's $250 Bonus</p>
         <button type="button" onclick="NavigateHome()" class="cta">
             <b>Explore Product</b>
         </button>  
@@ -741,6 +741,9 @@
                 <div>
                     <a href="../TermsAndConditions/termsAndConditions.html " class="text-decoration-none ">Terms &amp; Conditions</a>
                 </div>
+                <div>
+                  <a href="../BrandlogsForms/adminLogin.html" class="text-decoration-none "><b>Admin Login</b></a>
+              </div>
                 <br/>
                 <div>
                   <a href="../ContactForm/contact.html" class="text-decoration-none ">Contact Us</a>
