--- a/Brandlogs/LogStories/logstories.html
+++ b/Brandlogs/LogStories/logstories.html
@@ -39,7 +39,7 @@
                     <div id="suggestion-list"></div>
                 </form>
                 <div class="d-flex flex-column align-items-center"> 
-                  <p>To Get $250 Bonus</p>
+                  <p>To Get Hero's $250 Bonus</p>
                   <button class="cta fw-bold" data-toggle="modal" data-target="#first-modal">Accept invitation</button>
                   
                 
