--- a/Brandlogs/BrandlogsForms/Schoolsignin.html
+++ b/Brandlogs/BrandlogsForms/Schoolsignin.html
@@ -14,34 +14,45 @@
   </head>
   <body>
     <div class="container-fluid p-3">
-      <h3 class="text-center my-4">School director sign up</h3>
-      <div class="d-flex align-items-center justify-content-center">
-        <form action="submit" class="p-5 rounded">
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Phone Number</label
-            >
-            <input
-              type="tel"
-              id="exampleFormControlInput1"
-              class="form-control"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="inputPassword5" class="form-label">Password</label>
-            <input
-              type="password"
-              id="inputPassword5"
-              class="form-control"
-              aria-describedby="passwordHelpBlock"
-            />
-          </div>
-          <div class="d-flex align-items-center justify-content-center">
-            <button type="submit" class="w-100 mt-3 px-4 py-2 rounded">
-              Login
-            </button>
-          </div>
-        </form>
+      <h3 class="text-center text-capitalize my-4">school director sign in</h3>
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="form p-5 rounded">
+          <form action="submit" class="">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Phone Number</label
+              >
+              <input
+                type="tel"
+                id="exampleFormControlInput1"
+                class="form-control"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="inputPassword5" class="form-label">Password</label>
+              <input
+                type="password"
+                id="inputPassword5"
+                class="form-control"
+                aria-describedby="passwordHelpBlock"
+              />
+            </div>
+          </form>
+          <a
+            href="../Admin/schoolprofile.html"
+            style="text-decoration: none; display: block"
+          >
+            <div class="d-flex align-items-center justify-content-center">
+              <button
+                id="usermetrics"
+                type="submit"
+                class="w-100 mt-3 px-4 py-2 rounded"
+              >
+                Login
+              </button>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
     <script
