--- a/Brandlogs/BrandlogsForms/adminLogin.html
+++ b/Brandlogs/BrandlogsForms/adminLogin.html
@@ -15,35 +15,44 @@
   <body>
     <div class="container-fluid p-3">
       <h3 class="text-center my-4">Admin Login</h3>
-      <div class="d-flex align-items-center justify-content-center">
-        <form action="submit" class="p-5 rounded">
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Username</label
-            >
-            <input
-              type="tel"
-              id="exampleFormControlInput1"
-              class="form-control"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="inputPassword5" class="form-label">Password</label>
-            <input
-              type="password"
-              id="inputPassword5"
-              class="form-control"
-              aria-describedby="passwordHelpBlock"
-            />
-          </div>
-          <div class="d-flex align-items-center justify-content-center">
-            <a href="./SchoolProfileFlow.html">
-              <button type="submit" class="w-100 mt-3 px-4 py-2 rounded">
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="form p-5 rounded">
+          <form action="submit" class="">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Username</label
+              >
+              <input
+                type="tel"
+                id="exampleFormControlInput1"
+                class="form-control"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="inputPassword5" class="form-label">Password</label>
+              <input
+                type="password"
+                id="inputPassword5"
+                class="form-control"
+                aria-describedby="passwordHelpBlock"
+              />
+            </div>
+          </form>
+          <a
+            href="../Admin/usermetrics.html"
+            style="text-decoration: none; display: block"
+          >
+            <div class="d-flex align-items-center justify-content-center">
+              <button
+                id="usermetrics"
+                type="submit"
+                class="w-100 mt-3 px-4 py-2 rounded"
+              >
                 Login
               </button>
-            </a>
-          </div>
-        </form>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
     <script
